--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.8.0",
+    "stylelint-scss": "^3.17.2",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
   },
